v0.1.6 :: appearance on Safari browser corrected

--- a/src/styles/ColorWheel.css
+++ b/src/styles/ColorWheel.css
@@ -1,7 +1,7 @@
 .colorWheel{
-  flex-grow: 5;
   display: flex;
   position: relative;
+  height: 83.33%;
 }
 
 .wheel{
