--- a/src/styles/LevelBar.css
+++ b/src/styles/LevelBar.css
@@ -9,10 +9,8 @@
 .barBackground{
     height: 90%;
     width: 100%;
-}
-
-.firefox{
     mask-image: url('../assets/mask.svg');
     -webkit-mask-image: url('../assets/mask.svg');
-    mask-size: cover;
+    mask-size: contain;
+    -webkit-mask-size: contain;
 }
